# FastOMA

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  FastOMA.nf  FastOMA_light.nf  FastOMA_script.nf  README.md  README.md.orig  _dask_env.py  _hog_class.py  _inferhog.py  _rest.py  _utils.py  _utils_rhog.py  _wrappers.py  collect_orthoxml.py  collect_orthoxml_old_code.py  edit_orthxml_file.py  environment-conda.yml  fastoma_script.nf  future_examples.py  gethog3_script.nf  gethog3_script_slurm.nf  graveyard.py  hog_class.py  main.py  main_bird.py  nextflow.config  nextflow_schema.json  nextflow_slurm.config  nf-test.config  preprocess_qfo_files.py  pyproject.toml  run.slurm  setup.py  test.py  test_curnagle.py  test_mac.py  utils.py  (+2 more)
.github/workflows/: docker-image.yml  nf-test.yml  publish-pypi-release.yml
FastOMA/: __init__.py  _config.py  _hog_class.py  _infer_subhog.py  _utils_frag_SO_detection.py  _utils_roothog.py  _utils_subhog.py  _wrappers.py  batch_roothogs.py  check_fastoma_input.py  check_input.py  check_input_fastoma.py  collect_subhogs.py  fastoma_notebook_stat.ipynb  helper_scripts.py  infer_roothogs.py  infer_subhogs.py  logging_setup.py  requirements  transformer.py
FastOMA/tests/: test_fasttree_wrapper.py  test_infer_subhog.py
FastOMA/tests/data/: HOG_0890520.fa
FastOMA/zoo/: README.md  unionfind.py  utils.py
FastOMA/zoo/familyanalyzer/: __init__.py  genetree.py  newick.py  orthoxmlquery.py  taxonomy.py  tools.py
FastOMA/zoo/hog/: __init__.py  convert.py  extract_groups.py  extract_hog_info.py  filter_orthoxml.py  transform.py
FastOMA/zoo/wrappers/: __init__.py  abstract_cli.py  options.py
analysis/: collect_orthoxml.py  fastoma_mid_diff.py  fastoma_mid_newrhg.py  filter_rhog.py  graveyard.py  main_bird.py  test.py  test_analysis.py  test_curnagle.py  write_gene_id_pickle_old_code.py  xml_.py
archive/: FastOMA_script_after_omamer.nf  _inferhog_26Oct.py  _inferhog_dask.py  _inferhog_old.py  gethog3_from_rhog.py  gethog3_rhog.nf  main.py  nextf_run.slurm  nextf_script.nf  pickle_gene_id.py  test.nf  test_curn.py  test_infer_subhogs.py  test_matreex.py
archive/analysis/: collect_orthoxml_old_code.py  edit_orthxml_file.py  fasta_recid_convertor.py  fastoma_mid_diff.py  fastoma_mid_newrhg.py  filter_rhog.py  find_unfinished_rhog.py  future_examples.py  graveyard.py  main_bird.py  omamer_to_best_pairs.py  omamer_to_best_pairs_keep1.py  orthoxml_to_newick.py  preprocess_qfo_files.py  test_analysis.py  test_curnagle.py  test_mac.py  tutorial_pyHam_get_started_v1a.ipynb  write_gene_id_pickle_old_code.py  xml_.py
archive/bb/: HOG_B0890520.fa
conf/: base.config  base_large.config  slurm_basic.config  test-fungi.config  test-mammalia.config  test.config
fastoma/: __init__.py  _config.py  _hog_class.py  _infer_subhog.py  _utils_roothog.py  _utils_subhog.py  _wrappers.py  batch_roothogs.py  collect_subhogs.py  infer_subhogs.py
fastoma/zoo/: __init__.py
fastoma/zoo/file_utils/: __init__.py  extractors.py  (+1 more)
gethog3/: __init__.py  _config.py  _dask_env.py  _hog_class.py  _infer_rhog.py  _infer_subhog.py  _inferhog.py  _inferhog_26Oct.py  _utils.py  _utils_rhog.py  _utils_roothog.py  _utils_subhog.py  _wrappers.py  batch_roothogs.py  collect_orthoxml.py  collect_subhogs.py  curnagl.config  gethog3_script.nf  infer_folder.py  infer_rhog.py  infer_roothog.py  infer_roothogs.py  infer_subhogs.py  main.py  nextf_run.slurm  nextf_script.nf  nextf_script_all.nf  nextflow.config  pickle_gene_id.py  requirements  rhog_distributor.py  run.slurm  sc.nf  test_curn.py
gethog3/testdata/: species_tree.nwk
gethog3/wrappers/: utils.py
gethog3/zoo/: README.md  __init__.py
lib/: Utils.groovy
nf-tests/: .nftignore  default.nf.test  default.nf.test.snap
testdata/: README.md
testdata/expected_output/: FastOMA_HOGs.orthoxml  OrthologousGroups.tsv  RootHOGs.tsv  orthologs.tsv  phylostratigraphy.html  report.html  report.ipynb
tests/: test_fasttree_wrapper.py  test_infer_subhog.py  test_roothog_example.py
tests/data/: correct-msa.fa  failing-msa.fa
utils/: HOGcomposition.py  OrthoXMLSplitter.py  filter_orthoxml_completeness.py  find_unfinished_rhogs.py  generate_splice_file_Ensembl.py  orthoxml2OG.py  orthoxml2family.py  orthoxml2newick.py  orthoxml2pairs.py  orthoxml2perrhog.py  orthoxml2phylostratigraphy.py  orthoxml2rootHOG.py  orthoxml2rootHOGidLevel.py  orthoxml_to_newick.py  pickle2orthoxml.py  write_orthoxml_per_rHOG.py
(+82 files in other folders)
